# botanist

./: .gitignore  AUTHORS  Dockerfile  Dockerfile.ldapinit  Dockerfile.nginx  Jenkinsfile  LICENSE  README.md  TODO  Vagrantfile  btgrep.py  docker-compose.local.yml  docker-compose.yml  env.template  fabfile-example.py  install.sh  makefile  makefile.docker  pep8  pyproject.toml  sample.ldif
cert/: server.crt  server.key
cron/: fetch-code.sh  fetch-code.sh.template  index.sh  index.sh.template
etc/nginx/: nginx.conf.template
scripts/: btgrep.py
webapp/: db.sqlite3  manage.py  requirements.txt  webapp.conf  webapp.conf.template
webapp/codesearch/: settings.py  urls.py  wsgi.py
webapp/ui/: tests.py  urls.py  util.py  views.py
webapp/ui/static/: ui.css
webapp/ui/templates/: index.html  search.html
webapp/ui/tests/: test_all.py  test_get_repo_and_filepath.py  test_parse_search_results.py  test_prepare_source_line.py
webapp/ui/tests/fixtures/: basic_parse_search_results.txt  duplicate_repositories_in_github_and_bitbucket.results.txt
