[project]
name = "botanist"
description = "Fast web and command-line code search tool for companies and teams who use github and/or bitbucket."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Your Name", email = "<you@example.com>" }
]

[tool.poetry]
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.20"
datadog = "^0.49.1"
sentry-sdk = {extras = ["django"], version = "^2.5.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


